--- a/src/components/layout/header/header.module.scss
+++ b/src/components/layout/header/header.module.scss
@@ -1,3 +1,22 @@
 .header {
   display: flex;
+  font-family: "Poppins", sans-serif;
+  margin-bottom: 40px;
+  border-bottom: 1px solid rgb(77, 77, 77);
+
+  .container {
+    display: flex;
+    justify-content: space-between;
+    margin: 0 auto;
+    width: 90%;
+    max-width: 1200px;
+
+    .logo {
+      font-size: 32px;
+      padding-right: 20px;
+      margin: 20px 20px 20px 0;
+      border-right: 2px solid rgb(102, 102, 102);
+      text-transform: uppercase;
+    }
+  }
 }
