--- a/src/design-system/layout/header/header.module.scss
+++ b/src/design-system/layout/header/header.module.scss
@@ -1,11 +1,10 @@
-@use '@design-system/styles/utilities/variables' as vr;
+@use "@design-system/styles/utilities/variables" as vr;
 
 .header {
   background-color: var(--colorBlack);
-  border-bottom: 1px solid #4D4D4D;
+  border-bottom: 1px solid #4d4d4d;
   padding: vr.$spacingSizeL 0;
 }
-
 
 .wrapper {
   display: flex;
