--- a/src/design-system/layout/header/header.module.scss
+++ b/src/design-system/layout/header/header.module.scss
@@ -1,8 +1,9 @@
 @use "@design-system/styles/utilities/variables" as vr;
+@use "@design-system/styles/utilities/mixins" as mx;
 
 .header {
   background-color: var(--colorBlack);
-  border-bottom: 1px solid #4d4d4d;
+  border-bottom: 1px solid var(--colorThunder);
   padding: vr.$spacingSizeL 0;
 }
 
