Changes based on PR

--- a/src/design-system/layout/header/main-navigation/main-navigation.module.scss
+++ b/src/design-system/layout/header/main-navigation/main-navigation.module.scss
@@ -1,27 +1,29 @@
 @use "@design-system/styles/utilities/variables" as vr;
+@use "@design-system/styles/utilities/mixins" as mx;
 
 .nav {
   display: flex;
-}
 
-.list {
-  display: flex;
-  gap: vr.$spacingSizeS;
-}
+  .list {
+    display: flex;
+    gap: vr.$spacingSizeS;
 
-.element {
-}
+    .element {
+      @include mx.fontSize(20px);
 
-.link {
-  display: flex;
-  color: var(--colorWhite);
-  text-align: center;
-  padding: vr.$spacingSizeL;
-  border-top: 2px solid transparent;
-  border-bottom: 2px solid transparent;
+      .link {
+        display: flex;
+        color: var(--colorWhite);
+        text-align: center;
+        padding: vr.$spacingSizeL;
+        border-top: 2px solid transparent;
+        border-bottom: 2px solid transparent;
 
-  &:hover {
-    border-bottom: 2px solid var(--colorWhite);
-    font-weight: var(--fontWeightBold);
+        &:hover {
+          border-bottom: 2px solid var(--colorWhite);
+          font-weight: var(--fontWeightBold);
+        }
+      }
+    }
   }
 }
