--- a/src/design-system/layout/footer/footer.module.scss
+++ b/src/design-system/layout/footer/footer.module.scss
@@ -1,54 +1,53 @@
+@use "@design-system/styles/utilities/variables" as vr;
+@use "@design-system/styles/utilities/mixins" as mx;
+
 .footer {
   display: flex;
   flex-direction: column;
-  height: 200px;
-  font-family: "Poppins", sans-serif;
-}
+  background-color: var(--colorBlack);
 
-.navLinks {
-  display: flex;
-  list-style-type: none;
-  width: 90%;
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 60px 0 20px;
-  border-bottom: 2px solid white;
+  .container {
+    .navLinks {
+      display: flex;
+      list-style-type: none;
+      padding: vr.$spacingSize6XL 0 vr.$spacingSizeL;
+      border-bottom: 2px solid var(--colorWhite);
 
-  li {
-    margin: 0px 20px;
-    font-size: 20px;
+      .footerItem {
+        margin: 0 vr.$spacingSizeL;
+        color: var(--colorWhite);
+        @include mx.fontSize(20px);
 
-    &:first-of-type {
-      margin-left: 0px;
-    }
-  }
-}
-
-.bottomLinks {
-  display: flex;
-  list-style-type: none;
-  width: 90%;
-  max-width: 1200px;
-  height: 30px;
-  margin: 20px auto 0;
-  padding: 0px;
-
-  li {
-    margin: 0px 20px;
-    color: rgb(77, 77, 77);
-    font-size: 14px;
-
-    &:first-of-type {
-      margin-left: 0px;
+        &:first-of-type {
+          margin-left: 0px;
+        }
+      }
     }
 
-    &:last-of-type {
-      margin: 0 0 0 auto;
-    }
+    .bottomLinks {
+      display: flex;
+      list-style-type: none;
+      margin: vr.$spacingSizeL auto 0;
+      padding-bottom: 30px;
 
-    a {
-      color: inherit;
-      text-decoration: none;
+      .footerItem {
+        margin: 0 vr.$spacingSizeL;
+        color: var(--colorThunder);
+        @include mx.fontSize(14px);
+
+        &:first-of-type {
+          margin-left: 0;
+        }
+
+        &:last-of-type {
+          margin: 0 0 0 auto;
+        }
+
+        .footerLink {
+          color: inherit;
+          text-decoration: none;
+        }
+      }
     }
   }
 }
