--- a/src/design-system/layout/header/main-navigation/main-navigation.module.scss
+++ b/src/design-system/layout/header/main-navigation/main-navigation.module.scss
@@ -1,4 +1,5 @@
 @use "@design-system/styles/utilities/variables" as vr;
+@use "@design-system/styles/utilities/mixins" as mx;
 
 .nav {
   display: flex;
@@ -10,6 +11,7 @@
 }
 
 .element {
+  @include mx.fontSize(20px);
 }
 
 .link {
