--- a/src/design-system/layout/header/main-navigation/main-navigation.module.scss
+++ b/src/design-system/layout/header/main-navigation/main-navigation.module.scss
@@ -48,19 +48,29 @@
 
 @include mx.devices(mobile) {
   .nav {
+    display: block;
     position: absolute;
-    right: 0;
-    top: -200px;
+    width: 100%;
+    height: 0;
+    left: 0;
+    top: 100%;
+    overflow: hidden;
     background-color: var(--colorBlack);
-    transition: top 2s;
+    z-index: 1;
+    transition: height 1s;
   }
 
-  .active {
-    right: 0;
-    top: 85px;
-    transition: top 2s;
+  .activeHamburger {
+    height: 350px;
+    transition: height 1s;
   }
+
   .list {
+    display: block;
+    padding: vr.$spacingSizeL vr.$spacingSize7XL;
+  }
+
+  .link {
     display: block;
   }
 }
