--- a/src/components/shared/dropdown/dropdown.module.scss
+++ b/src/components/shared/dropdown/dropdown.module.scss
@@ -55,3 +55,9 @@
   width: 100%;
   min-width: 150px;
 }
+
+@include mx.devices(mobile) {
+  .dropdownWrapper {
+    margin: 0 auto 0 vr.$spacingSizeL;
+  }
+}
