--- a/src/design-system/layout/footer/bottom-navigation/bottom-navigation.module.scss
+++ b/src/design-system/layout/footer/bottom-navigation/bottom-navigation.module.scss
@@ -16,3 +16,12 @@
   color: inherit;
   text-decoration: none;
 }
+
+@include mx.devices(mobile) {
+  .bottomLinks {
+    margin: vr.$spacingSizeL 0 vr.$spacingSize4XL;
+  }
+  .bottomItem {
+    @include mx.fontSize(12px);
+  }
+}
