--- a/src/design-system/layout/footer/footer-navigation/footer-navigation.module.scss
+++ b/src/design-system/layout/footer/footer-navigation/footer-navigation.module.scss
@@ -12,3 +12,14 @@
   color: var(--colorWhite);
   @include mx.fontSize(20px);
 }
+
+@include mx.devices(mobile) {
+  .footerList {
+    gap: vr.$spacingSizeM;
+    padding: vr.$spacingSize4XL 0 vr.$spacingSizeL;
+  }
+
+  .footerItem {
+    @include mx.fontSize(16px);
+  }
+}
