--- a/src/design-system/styles/utilities/_variables.scss
+++ b/src/design-system/styles/utilities/_variables.scss
@@ -17,5 +17,6 @@ $spacingSize9XL: $spacingBasicUnit * 32; // 128px
 // =========================== End Spacing ===========================
 
 // media breakpoints
-$breakpointMobile: 640px;
-$breakpointDesktop: 1000px;
+$breakpointMobile: 770px;
+$breakpointTablet: 1200px;
+$breakpointDesktop: 1450px;
