--- a/src/design-system/layout/utilities/container/container.module.scss
+++ b/src/design-system/layout/utilities/container/container.module.scss
@@ -5,9 +5,28 @@
   display: block;
   width: 100%;
   margin: auto;
-  max-width: 1280px;
+  max-width: 1800px;
+  padding: 0 vr.$spacingSize9XL
 }
 
 .fullWidth {
   max-width: 100%;
+}
+
+@include mx.devices(desktop) {
+  .container {
+    padding: 0 vr.$spacingSize7XL;
+  }
+}
+
+@include mx.devices(tablet) {
+  .container {
+    padding: 0 vr.$spacingSize4XL;
+  }
+}
+
+@include mx.devices(mobile) {
+  .container {
+    padding: 0 vr.$spacingSizeXL;
+  }
 }
