--- a/src/design-system/styles/utilities/_mixins.scss
+++ b/src/design-system/styles/utilities/_mixins.scss
@@ -14,8 +14,7 @@
     @media (max-width: vr.$breakpointTablet) {
       @content;
     }
-  }
-  @else if $size == desktop {
+  } @else if $size == desktop {
     @media (max-width: vr.$breakpointDesktop) {
       @content;
     }
