--- a/src/components/views/home/main-banner/main-banner.module.scss
+++ b/src/components/views/home/main-banner/main-banner.module.scss
@@ -15,8 +15,13 @@
   z-index: 1;
   width: 100%;
   height: 100%;
-  background: rgb(15,15,15);
-  background: linear-gradient(90deg, rgba(15,15,15,1) 0%, rgba(0,0,0,0.6558998599439776) 28%, rgba(255,255,255,0) 81%);
+  background: rgb(15, 15, 15);
+  background: linear-gradient(
+    90deg,
+    rgba(15, 15, 15, 1) 0%,
+    rgba(0, 0, 0, 0.6558998599439776) 28%,
+    rgba(255, 255, 255, 0) 81%
+  );
 }
 
 .content {
@@ -33,10 +38,10 @@
 }
 
 .subtitle {
-    @include mx.fontSize(24px);
-    line-height: 1.5em;
-    max-width: 1350px;
-    margin-top: vr.$spacingSizeXL;
+  @include mx.fontSize(24px);
+  line-height: 1.5em;
+  max-width: 1350px;
+  margin-top: vr.$spacingSizeXL;
 }
 
 .btnWrapper {
