--- a/src/design-system/layout/utilities/container/container.module.scss
+++ b/src/design-system/layout/utilities/container/container.module.scss
@@ -6,7 +6,7 @@
   width: 100%;
   margin: auto;
   max-width: 1800px;
-  padding: 0 vr.$spacingSize9XL
+  padding: 0 vr.$spacingSize9XL;
 }
 
 .fullWidth {
