changes based on PR

--- a/src/design-system/layout/header/header.module.scss
+++ b/src/design-system/layout/header/header.module.scss
@@ -5,6 +5,7 @@
   background-color: var(--colorBlack);
   border-bottom: 1px solid var(--colorThunder);
   padding: vr.$spacingSizeL 0;
+  font-family: var(--fontFamilyTertiary);
 }
 
 .wrapper {
