--- a/src/design-system/layout/header/hamburger/hamburger.module.scss
+++ b/src/design-system/layout/header/hamburger/hamburger.module.scss
@@ -3,64 +3,14 @@
 
 .hamburger {
   display: none;
-  position: relative;
-  color: var(--colorWhite);
-  margin: 0 vr.$spacingSizeXL;
+  fill: var(--colorWhite);
   cursor: pointer;
 }
 
 @include mx.devices(mobile) {
   .hamburger {
     display: block;
-    height: 20px;
-    width: 30px;
+    height: 35px;
     z-index: 2;
-  }
-
-  .navHamburgerSpan {
-    position: absolute;
-    display: block;
-    height: 4px;
-    width: 30px;
-    border-radius: 9px;
-    background-color: var(--colorWhite);
-    transform: rotate(0deg);
-    transition: 0.25s ease-in-out;
-
-    &:first-child {
-      top: 0;
-      left: 0;
-    }
-
-    &:nth-child(2),
-    &:nth-child(3) {
-      top: 9px;
-      left: 0;
-    }
-
-    &:nth-child(4) {
-      top: 18px;
-      left: 0;
-    }
-  }
-
-  .activeHamburger span:first-child {
-    top: 9px;
-    width: 0;
-    left: 50%;
-  }
-
-  .activeHamburger span:nth-child(2) {
-    transform: rotate(45deg);
-  }
-
-  .activeHamburger span:nth-child(3) {
-    transform: rotate(-45deg);
-  }
-
-  .activeHamburger span:nth-child(4) {
-    top: 9px;
-    width: 0;
-    left: 50%;
   }
 }
