Changes based on PR (#9)
* Added Footerv1 & imported global scsss to base-layout

* Added Headerv1, header scss &  some css to global

* Changes based on PR

* changes based on PR

* part of Responsive

* minor changes (mobile responsive)

* hamburger done

* mobile footer

* context

* changes based on PR

---------

Co-authored-by: Michał Kowalski <mkowalski@pandagroup.co>

--- a/src/design-system/layout/header/header.module.scss
+++ b/src/design-system/layout/header/header.module.scss
@@ -5,10 +5,12 @@
   background-color: var(--colorBlack);
   border-bottom: 1px solid var(--colorThunder);
   padding: vr.$spacingSizeL 0;
+  font-family: var(--fontFamilyTertiary);
 }
 
 .wrapper {
   display: flex;
+  position: relative;
   justify-content: space-between;
   align-items: center;
   width: 100%;
