--- a/src/design-system/layout/header/main-navigation/main-navigation.module.scss
+++ b/src/design-system/layout/header/main-navigation/main-navigation.module.scss
@@ -31,3 +31,46 @@
     border-bottom: 2px solid var(--colorWhite);
   }
 }
+
+@include mx.devices(tablet) {
+  .list {
+    gap: 0;
+  }
+
+  .element {
+    @include mx.fontSize(16px);
+  }
+
+  .link {
+    padding: vr.$spacingSizeS;
+  }
+}
+
+@include mx.devices(mobile) {
+  .nav {
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 0;
+    left: 0;
+    top: 100%;
+    overflow: hidden;
+    background-color: var(--colorBlack);
+    z-index: 2;
+    transition: height 1s;
+  }
+
+  .activeNav {
+    height: 350px;
+    transition: height 1s;
+  }
+
+  .list {
+    display: block;
+    padding: vr.$spacingSizeL vr.$spacingSize7XL;
+  }
+
+  .link {
+    display: block;
+  }
+}
