--- a/src/components/shared/dropdown/dropdown.module.scss
+++ b/src/components/shared/dropdown/dropdown.module.scss
@@ -56,8 +56,8 @@
   min-width: 150px;
 }
 
-@include mx.devices(mobile) {
+@include mx.devices(tablet) {
   .dropdownWrapper {
-    margin: 0 auto 0 vr.$spacingSizeL;
+    margin: 0 auto;
   }
 }
