--- a/src/design-system/layout/header/header.module.scss
+++ b/src/design-system/layout/header/header.module.scss
@@ -4,8 +4,14 @@
 .header {
   background-color: var(--colorBlack);
   border-bottom: 1px solid var(--colorThunder);
-  padding: vr.$spacingSizeL 0;
+  height: 90px;
+  display: flex;
   font-family: var(--fontFamilyTertiary);
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 3;
+  width: 100%;
 }
 
 .wrapper {
@@ -14,4 +20,34 @@
   justify-content: space-between;
   align-items: center;
   width: 100%;
+}
+
+.actionWrapper {
+  display: flex;
+  align-items: center;
+
+}
+
+@include mx.devices(tablet) {
+ .header:after {
+    display: none;
+  }
+
+  .actionWrapper {
+    flex-direction: column;
+    position: fixed;
+    top: 90px;
+    width: 100%;
+    height: 0;
+    left: 0;
+    transform: none;
+    overflow: hidden;
+    background-color: var(--colorBlack);
+    z-index: 2;
+    transition: height 0.3s ease-in-out;
+
+    &.activeNav {
+      height: 460px;
+    }
+  }
 }
