--- a/src/design-system/layout/header/main-navigation/main-navigation.module.scss
+++ b/src/design-system/layout/header/main-navigation/main-navigation.module.scss
@@ -3,6 +3,10 @@
 
 .nav {
   display: flex;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  height: 90px;
 }
 
 .list {
@@ -21,6 +25,9 @@
   padding: vr.$spacingSizeL;
   border-top: 2px solid transparent;
   border-bottom: 2px solid transparent;
+  white-space: nowrap;
+  height: 100%;
+  align-items: center;
 
   &:hover,
   &.active {
@@ -32,45 +39,34 @@
   }
 }
 
+@include mx.devices(desktop) {
+  .element {
+    @include mx.fontSize(18px);
+  }
+}
+
 @include mx.devices(tablet) {
-  .list {
-    gap: 0;
+  .nav {
+    display: block;
+    position: relative;
+    height: auto;
+    width: 100%;
   }
 
   .element {
     @include mx.fontSize(16px);
   }
 
-  .link {
-    padding: vr.$spacingSizeS;
-  }
-}
-
-@include mx.devices(mobile) {
-  .nav {
-    display: block;
-    position: absolute;
-    width: 100%;
-    height: 0;
-    left: 0;
-    top: 100%;
-    overflow: hidden;
-    background-color: var(--colorBlack);
-    z-index: 2;
-    transition: height 1s;
-  }
-
-  .activeNav {
-    height: 350px;
-    transition: height 1s;
-  }
-
   .list {
     display: block;
-    padding: vr.$spacingSizeL vr.$spacingSize7XL;
+    padding: vr.$spacingSizeS 0;
   }
 
   .link {
     display: block;
+    padding: vr.$spacingSizeM 0;
+    &.active {
+      border: none;
+    }
   }
 }
