--- a/src/design-system/layout/header/header.module.scss
+++ b/src/design-system/layout/header/header.module.scss
@@ -6,12 +6,15 @@
   border-bottom: 1px solid var(--colorThunder);
   height: 90px;
   display: flex;
-  font-family: var(--fontFamilyTertiary);
   position: fixed;
   top: 0;
   left: 0;
   z-index: 3;
   width: 100%;
+}
+
+.container {
+  display: flex;
 }
 
 .wrapper {
