--- a/src/components/shared/button/button.module.scss
+++ b/src/components/shared/button/button.module.scss
@@ -7,7 +7,7 @@
   align-items: center;
   justify-content: center;
   padding: 0 vr.$spacingSizeL;
-  font-family: var(--fontFamilySecondary);
+  font-family: var(--fontFamilyTertiary);
   font-weight: var(--fontWeightBold);
   border: 1px solid transparent;
   border-radius: 5px;
@@ -74,6 +74,6 @@
   .button {
     @include mx.fontSize(16px);
     height: 45px;
-    min-width: 160px;
+    min-width: 150px;
   }
 }
