--- a/src/design-system/layout/utilities/container/container.module.scss
+++ b/src/design-system/layout/utilities/container/container.module.scss
@@ -4,7 +4,7 @@
 .container {
   display: block;
   width: 100%;
-  margin: auto;
+  margin: 0 auto;
   max-width: 1800px;
   padding: 0 vr.$spacingSize9XL;
 }
