--- a/src/components/shared/dropdown/dropdown.module.scss
+++ b/src/components/shared/dropdown/dropdown.module.scss
@@ -56,6 +56,12 @@
   min-width: 150px;
 }
 
+@include mx.devices(mobile) {
+  .dropdownWrapper {
+    margin: 0 auto 0 vr.$spacingSizeL;
+  }
+}
+
 @include mx.devices(tablet) {
   .dropdownWrapper {
     margin: 0 auto;
