--- a/src/components/views/about-us/more/more.module.scss
+++ b/src/components/views/about-us/more/more.module.scss
@@ -27,6 +27,7 @@
   @include mx.fontSize(50px);
   margin-bottom: vr.$spacingSizeL;
   font-weight: var(--fontWeightBold);
+  font-family: var(--fontFamilySecondary);
 }
 
 .subtitle {
