--- a/src/components/views/about-us/more/more.module.scss
+++ b/src/components/views/about-us/more/more.module.scss
@@ -19,7 +19,6 @@
   position: relative;
   flex-basis: 50%;
   align-self: center;
-  font-family: var(--fontFamilyTertiary);
   padding: vr.$spacingSizeL;
 }
 
@@ -33,4 +32,40 @@
 .subtitle {
   @include mx.fontSize(19px);
   font-weight: var(--fontWeightRegular);
+}
+
+@include mx.devices(mobile) {
+  .content {
+    flex-direction: column;
+  }
+
+  .section {
+    padding: vr.$spacingSizeXS;
+  }
+
+  .section:last-child {
+    margin: vr.$spacingSizeL 0;
+  }
+
+  .subtitle {
+    @include mx.fontSize(17px);
+  }
+
+  .image {
+    height: 250px;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .title {
+    @include mx.fontSize(44px);
+  }
+
+  .subtitle {
+    @include mx.fontSize(15px);
+  }
+
+  .image {
+    height: 200px;
+  }
 }
