finished gallery page

--- a/src/design-system/styles/global.scss
+++ b/src/design-system/styles/global.scss
@@ -1,13 +1,9 @@
 @import "reset";
-
+@import "./global/swiper";
 body,
 html {
   font-family: var(--fontFamilyPrimary);
   color: var(--colorWhite);
-}
-
-body {
-  padding-top: 90px;
 }
 
 :root {
