--- a/src/components/views/gallery/blog/blog.module.scss
+++ b/src/components/views/gallery/blog/blog.module.scss
@@ -15,19 +15,52 @@
 .imageWrapper {
   position: relative;
   aspect-ratio: 1/1;
+  cursor: zoom-in;
+
+  .hoverOverlay {
+    display: flex;
+    background-color: rgba(0, 0, 0, 0);
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    transition: background-color 0.1s ease-in-out;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .zoomIcon {
+    opacity: 0;
+    transition: opacity 0.1s ease-in-out;
+    fill: rgba(255, 255, 255, 0.9);
+  }
+
+  &:hover {
+    .hoverOverlay {
+      background-color: rgba(0, 0, 0, 0.7);
+    }
+
+    .zoomIcon {
+      opacity: 1;
+    }
+  }
 }
 
 .gridWrapper {
   display: grid;
   grid-gap: vr.$spacingSizeXL;
-  grid-template-columns: [col1-start] 20% [col2-start] 20% [col3-start] 20% [col4-start] 20% [col5-start] 20% [col6-start] 20% [col6-end];
+  grid-template-columns: [col1-start] 1fr [col2-start] 1fr [col3-start] 1fr [col4-start] 1fr [col5-start] 1fr [col5-end];
   grid-template-rows: [row1-start] auto [row2-start] auto [row2-end];
 }
 
 .gridItem {
   position: relative;
   align-self: end;
-  @include mx.fontSize(100px);
+  @include mx.fontSize(70px);
 
   &:nth-child(1) {
     grid-column: col1-start / col4-start;
@@ -59,8 +92,54 @@
   }
 }
 
+.subtitle {
+  display: block;
+}
+
 @include mx.devices(desktop) {
-  .grid-item {
-    @include mx.fontSize(80px);
+  .gridItem {
+    @include mx.fontSize(60px);
   }
+}
+
+
+@include mx.devices(tablet) {
+  .gridItem {
+    @include mx.fontSize(40px);
+  }
+}
+
+@include mx.devices(mobile) {
+  .gridItem {
+    @include mx.fontSize(40px);
+    width: calc(50% - 12px);
+
+
+    &:nth-child(1) {
+      width: 100%;
+      text-align: left;
+    }
+
+    .subtitle {
+      display: inline-block;
+    }
+  }
+
+  .gridWrapper {
+    display: flex;
+    flex-wrap:wrap;
+  }
+
+  .sectionWrapper {
+    padding: vr.$spacingSize3XL 0;
+  }
+}
+
+
+@media (max-width: 400px) {
+  .gridItem {
+    width: 100%;
+    @include mx.fontSize(32px);
+  }
+
 }
