--- a/src/components/views/home/main-banner/main-banner.module.scss
+++ b/src/components/views/home/main-banner/main-banner.module.scss
@@ -3,7 +3,7 @@
 
 .wrapper {
   position: relative;
-  align-items: end;
+  align-items: flex-end;
   display: flex;
   padding: 0;
   height: 80vh;
@@ -32,7 +32,7 @@
   height: 100%;
   background: rgb(15, 15, 15);
   background: linear-gradient(
-    360deg,
+    0deg,
     rgba(5, 5, 5, 1) 0%,
     rgba(0, 0, 0, 0.6558998599439776) 18%,
     rgba(255, 255, 255, 0) 51%
