--- a/src/design-system/layout/header/header.module.scss
+++ b/src/design-system/layout/header/header.module.scss
@@ -6,7 +6,7 @@
   border-bottom: 1px solid var(--colorThunder);
   height: 90px;
   display: flex;
-  position: fixed;
+  position: sticky;
   top: 0;
   left: 0;
   z-index: 3;
