--- a/src/components/views/about-us/LocalizationSection/LocalizationSection.module.scss
+++ b/src/components/views/about-us/LocalizationSection/LocalizationSection.module.scss
@@ -8,3 +8,63 @@
   justify-content: center;
   position: relative;
 }
+
+.form {
+  padding: vr.$spacingSizeL vr.$spacingSize3XL;
+  width: 50%;
+  height: 600px;
+  border: 1px solid white;
+  border-radius: vr.$spacingSizeS;
+  position: relative;
+  background-color: #000;
+  z-index: 1;
+  opacity: 0.85;
+}
+
+.title {
+  font-family: var(--fontFamilySecondary);
+  @include mx.fontSize(56px);
+  margin-bottom: vr.$spacingSizeL;
+}
+
+@include mx.devices(desktop) {
+  .form {
+    width: 60%;
+  }
+
+  .title {
+    @include mx.fontSize(45px);
+  }
+}
+
+@include mx.devices(tablet) {
+  .form {
+    width: 570px;
+  }
+}
+
+@include mx.devices(mobile) {
+  .form {
+    width: 90%;
+    margin: 0 auto;
+    padding: vr.$spacingSizeL vr.$spacingSizeXL;
+  }
+
+  .title {
+    @include mx.fontSize(32px);
+  }
+
+  .text {
+    @include mx.fontSize(14px);
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .form {
+    width: 100%;
+  }
+
+  .title {
+    @include mx.fontSize(20px);
+  }
+}
