--- a/src/components/shared/modal-dialog/modal-dialog.module.scss
+++ b/src/components/shared/modal-dialog/modal-dialog.module.scss
@@ -41,7 +41,7 @@
 
 .closeButton {
   border: none;
-  background-color: white;
+  background-color: #f2f2f2;
   position: absolute;
   z-index: 10;
   right: vr.$spacingSizeXL;
