--- a/src/components/views/home/our-offer/our-offer.module.scss
+++ b/src/components/views/home/our-offer/our-offer.module.scss
@@ -2,10 +2,121 @@
 @use "@design-system/styles/utilities/mixins" as mx;
 
 .wrapper {
-  min-height: 800px;
-  display: flex;
-  align-items: center;
+  position: relative;
   justify-content: center;
-  background-color: darkgray;
+  background-color: var(--colorWhite);
   color: black;
+  padding: vr.$spacingSize5XL 0;
+}
+
+.mainTitle {
+  font-family: var(--fontFamilySecondary);
+  @include mx.fontSize(58px);
+  @include mx.fontGlow(8px);
+  text-align: center;
+  padding: 0 0 vr.$spacingSize3XL;
+}
+
+.content {
+  position: relative;
+  z-index: 1;
+}
+
+.boxWrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: stretch;
+  padding: 0 vr.$spacingSizeXXL;
+  max-width: 1100px;
+  margin:auto;
+  width: 100%;
+  gap: vr.$spacingSize3XL;
+}
+
+.box {
+  max-width: 600px;
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  border-radius: 8px;
+  overflow: hidden;
+  flex-grow: 1;
+}
+
+.contentBox {
+  background: var(--colorBlack);
+  color: var(--colorWhite);
+  padding: vr.$spacingSizeXL;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.imgWrapper {
+  position: relative;
+}
+
+.imgOverlay {
+  position: absolute;
+  z-index: 1;
+  background: linear-gradient(
+                  0deg,
+                  rgba(0, 0, 0, 1) 0%,
+                  rgba(0, 0, 0, 0.7558998599439776) 25%,
+                  rgba(255, 255, 255, 0) 81%
+  );
+  width: 100%;
+  height: 100%;
+  top: 2px;
+  left: 0;
+}
+
+.boxTitle {
+    font-family: var(--fontFamilySecondary);
+    @include mx.fontSize(42px);
+}
+
+.boxDescription {
+  @include mx.fontSize(18px);
+  padding-top: vr.$spacingSizeXXS;
+}
+
+.btnWrapper {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+.boxBtn {
+  margin-top: vr.$spacingSize3XL;
+  width: auto;
+}
+
+@include mx.devices(desktop) {
+  .boxDescription {
+    @include mx.fontSize(16px);
+  }
+}
+
+@include mx.devices(mobile) {
+  .boxTitle, .mainTitle {
+    @include mx.fontSize(32px);
+  }
+
+  .boxDescription {
+    @include mx.fontSize(14px);
+  }
+
+  .boxWrapper {
+    flex-direction: column;
+    align-items: center;
+  }
+  .box {
+    width: 100%;
+  }
+
+  .imgWrapper img {
+    height: 63vw;
+    width: auto;
+  }
 }
