--- a/src/components/views/home/meet-us/meet-us.module.scss
+++ b/src/components/views/home/meet-us/meet-us.module.scss
@@ -14,11 +14,11 @@
   width: 50%;
   display: flex;
   align-items: center;
-    justify-content: center;
+  justify-content: center;
 
   :global {
     .swiper-button-prev,
-    .swiper-button-next, {
+    .swiper-button-next {
       background: var(--colorWhite);
       width: 65px;
       height: 65px;
@@ -41,7 +41,7 @@
         background: var(--colorWhite);
         opacity: 1;
 
-        &.swiper-pagination-bullet-active{
+        &.swiper-pagination-bullet-active {
           background: var(--colorBlack);
           border: 5px solid var(--colorWhite);
         }
@@ -56,7 +56,6 @@
   align-items: center;
   justify-content: center;
 }
-
 
 .content {
   width: 50%;
@@ -117,7 +116,7 @@
   .sliderWrapper {
     :global {
       .swiper-button-prev,
-      .swiper-button-next, {
+      .swiper-button-next {
         width: 35px;
         height: 35px;
         &::after {
@@ -126,12 +125,11 @@
       }
 
       .swiper-pagination-bullets {
-
         .swiper-pagination-bullet {
           width: 12px;
           height: 12px;
 
-          &.swiper-pagination-bullet-active{
+          &.swiper-pagination-bullet-active {
             border: 3px solid var(--colorWhite);
           }
         }
