--- a/src/components/views/home/our-offer/our-offer.module.scss
+++ b/src/components/views/home/our-offer/our-offer.module.scss
@@ -28,7 +28,7 @@
   align-items: stretch;
   padding: 0 vr.$spacingSizeXXL;
   max-width: 1100px;
-  margin:auto;
+  margin: auto;
   width: 100%;
   gap: vr.$spacingSize3XL;
 }
@@ -61,10 +61,10 @@
   position: absolute;
   z-index: 1;
   background: linear-gradient(
-                  0deg,
-                  rgba(0, 0, 0, 1) 0%,
-                  rgba(0, 0, 0, 0.7558998599439776) 25%,
-                  rgba(255, 255, 255, 0) 81%
+    0deg,
+    rgba(0, 0, 0, 1) 0%,
+    rgba(0, 0, 0, 0.7558998599439776) 25%,
+    rgba(255, 255, 255, 0) 81%
   );
   width: 100%;
   height: 100%;
@@ -73,8 +73,8 @@
 }
 
 .boxTitle {
-    font-family: var(--fontFamilySecondary);
-    @include mx.fontSize(42px);
+  font-family: var(--fontFamilySecondary);
+  @include mx.fontSize(42px);
 }
 
 .boxDescription {
@@ -99,7 +99,8 @@
 }
 
 @include mx.devices(mobile) {
-  .boxTitle, .mainTitle {
+  .boxTitle,
+  .mainTitle {
     @include mx.fontSize(32px);
   }
 
