--- a/src/components/views/about-us/localization-section/localization-section.module.scss
+++ b/src/components/views/about-us/localization-section/localization-section.module.scss
@@ -13,12 +13,11 @@
   padding: vr.$spacingSizeL vr.$spacingSize3XL;
   width: 50%;
   height: 600px;
-  border: 1px solid white;
+  border: 1px solid var(--colorWhite);
   border-radius: vr.$spacingSizeS;
   position: relative;
-  background-color: #000;
+  background-color: rgba(0, 0, 0, 0.85);
   z-index: 1;
-  opacity: 0.85;
 }
 
 .title {
