--- a/src/components/views/gallery/main-banner/main-banner.module.scss
+++ b/src/components/views/gallery/main-banner/main-banner.module.scss
@@ -30,6 +30,7 @@
   z-index: 1;
   width: 100%;
   height: 100%;
+  bottom: -1px;
   background: rgb(15, 15, 15);
   background: linear-gradient(
     0deg,
