--- a/src/components/views/home/contact/contact.module.scss
+++ b/src/components/views/home/contact/contact.module.scss
@@ -7,8 +7,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  color: black;
-  background-color: black;
+  color: var(--colorWhite);
+  background-color: var(--colorBlack);
 }
 
 .backgroundImage {
