--- a/src/components/views/home/our-offer/our-offer.module.scss
+++ b/src/components/views/home/our-offer/our-offer.module.scss
@@ -5,7 +5,7 @@
   position: relative;
   justify-content: center;
   background-color: var(--colorWhite);
-  color: black;
+  color: var(--colorBlack);
   padding: vr.$spacingSize5XL 0;
 }
 
